# hack-the-liquid-way-202606

./: .gitignore  CLAUDE.md  LICENSE  README.md  check_audio2audio_full_roundtrip.py  check_audio2audio_roundtrip.py  check_audio_with_whisper.py  demo.py  demo_audio2audio.py  demo_realtime.py  demo_samples.sh  eval_audio2audio.py  eval_audio2audio_full.py  eval_audio2text_control.py  eval_convert.py  evaluate.py  find_best_demo_samples.py  hf_upload.py  hf_upload_audio2audio.py  main.py  pyproject.toml  run_all.sh  run_full_ft.sh  sanity_check_roundtrip_method.py  test_interleaved.py  train.py  train_whisper_baseline.py
TeamYamaguchi_Track2_HackTheLiquidWAY_DemoAssets/: README.txt  slides.html  slides.md  slides_en.html  slides_en.md  slides_ja.html  slides_ja.md  slides_v1_text_conversion.html  slides_v1_text_conversion_ja.md
data/: generate_standard_pairs.py  prepare_conversion.py  prepare_conversion_audio2audio.py  prepare_conversion_text.py  prepare_data.py  prepare_dialect.py
scripts/: probe_model.py
