[project]
name = "hack-the-liquid-way-202606"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=5.0.0",
    "edge-tts>=7.2.8",
    "editdistance>=0.8.1",
    "gradio>=6.16.0",
    "huggingface-hub[cli]>=1.18.0",
    "jiwer>=4.0.0",
    "librosa>=0.11.0",
    "liquid-audio>=1.3.0",
    "openai>=2.41.0",
    "peft>=0.19.1",
    "pyaudio>=0.2.14",
    "silero-vad>=6.2.1",
    "soundfile>=0.13.1",
    "torchcodec>=0.14.0",
    "transformers>=5.10.2",
    "wandb>=0.27.1",
    "yt-dlp>=2026.3.17",
]
